# AI-Interview-Assistant-Backend

./: .gitignore  README.md  pyproject.toml  server.py
ChatBot/: agent.py  events.py  invoke_agent.py  llm.py  socket_manager.py  stt.py  tts.py
ChatBot/tools/: csv_tool.py  open_editor.py  tool_list.py  web_search_tool.py
Utils/: jwt.py
mongodb/: userConversations.py  userdb.py
mongodb/schema/: userConversation.py  userSchema.py
routes/: authentication.py  chat.py  test.py  websocketStream.py
routes/dependencies/: check_login.py
routes/middleware/: check_login.py
