[project]
name = "AI-Interview-Assistant-Backend"
version = "0.1.0"
description = ""
authors = [
    {name = "kartik",email = "kartiks9999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "motor (>=3.7.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "langchain-google-genai (>=2.1.10,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-core (>=0.3.75,<0.4.0)",
    "requests (>=2.32.5,<3.0.0)",
    "langgraph-checkpoint-mongodb (>=0.2.0,<0.3.0)",
    "pymongo (>=4.14.1,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "utils (>=1.0.2,<2.0.0)",
    "elevenlabs (>=2.26.0,<3.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "google-cloud-speech (>=2.34.0,<3.0.0)",
    "langchain-groq (>=0.2.0)",
    "google-cloud-texttospeech (>=2.33.0,<3.0.0)",
    "contextvars (>=2.4,<3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false